docs/apache-airflow-providers-google/10.2.0/_sources/_api/airflow/providers/google/cloud/hooks/dataform/index.rst.txt
:py:mod:`airflow.providers.google.cloud.hooks.dataform`
=======================================================

.. py:module:: airflow.providers.google.cloud.hooks.dataform


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.google.cloud.hooks.dataform.DataformHook




.. py:class:: DataformHook(**kwargs)


   Bases: :py:obj:`airflow.providers.google.common.hooks.base_google.GoogleBaseHook`

   Hook for Google Cloud DataForm APIs.

   .. py:method:: get_dataform_client()

      Retrieves client library object that allow access to Cloud Dataform service.


   .. py:method:: wait_for_workflow_invocation(workflow_invocation_id, repository_id, project_id, region, wait_time = 10, timeout = None)

      Helper method which polls a job to check if it finishes.

      :param workflow_invocation_id: Id of the Workflow Invocation
      :param repository_id: Id of the Dataform repository
      :param project_id: Required. The ID of the Google Cloud project the cluster belongs to.
      :param region: Required. The Cloud Dataproc region in which to handle the request.
      :param wait_time: Number of seconds between checks
      :param timeout: How many seconds wait for job to be ready. Used only if ``asynchronous`` is False


   .. py:method:: create_compilation_result(project_id, region, repository_id, compilation_result, retry = DEFAULT, timeout = None, metadata = ())

      Creates a new CompilationResult in a given project and location.

      :param project_id: Required. The ID of the Google Cloud project that the task belongs to.
      :param region: Required. The ID of the Google Cloud region that the task belongs to.
      :param repository_id: Required. The ID of the Dataform repository that the task belongs to.
      :param compilation_result:  Required. The compilation result to create.
      :param retry: Designation of what errors, if any, should be retried.
      :param timeout: The timeout for this request.
      :param metadata: Strings which should be sent along with the request as metadata.


   .. py:method:: get_compilation_result(project_id, region, repository_id, compilation_result_id, retry = DEFAULT, timeout = None, metadata = ())

      Fetches a single CompilationResult.

      :param project_id: Required. The ID of the Google Cloud project that the task belongs to.
      :param region: Required. The ID of the Google Cloud region that the task belongs to.
      :param repository_id: Required. The ID of the Dataform repository that the task belongs to.
      :param compilation_result_id:  The Id of the Dataform Compilation Result
      :param retry: Designation of what errors, if any, should be retried.
      :param timeout: The timeout for this request.
      :param metadata: Strings which should be sent along with the request as metadata.


   .. py:method:: create_workflow_invocation(project_id, region, repository_id, workflow_invocation, retry = DEFAULT, timeout = None, metadata = ())

      Creates a new WorkflowInvocation in a given Repository.

      :param project_id: Required. The ID of the Google Cloud project that the task belongs to.
      :param region: Required. The ID of the Google Cloud region that the task belongs to.
      :param repository_id: Required. The ID of the Dataform repository that the task belongs to.
      :param workflow_invocation:  Required. The workflow invocation resource to create.
      :param retry: Designation of what errors, if any, should be retried.
      :param timeout: The timeout for this request.
      :param metadata: Strings which should be sent along with the request as metadata.


   .. py:method:: get_workflow_invocation(project_id, region, repository_id, workflow_invocation_id, retry = DEFAULT, timeout = None, metadata = ())

      Fetches a single WorkflowInvocation.

      :param project_id: Required. The ID of the Google Cloud project that the task belongs to.
      :param region: Required. The ID of the Google Cloud region that the task belongs to.
      :param repository_id: Required. The ID of the Dataform repository that the task belongs to.
      :param workflow_invocation_id:  Required. The workflow invocation resource's id.
      :param retry: Designation of what errors, if any, should be retried.
      :param timeout: The timeout for this request.
      :param metadata: Strings which should be sent along with the request as metadata.


   .. py:method:: cancel_workflow_invocation(project_id, region, repository_id, workflow_invocation_id, retry = DEFAULT, timeout = None, metadata = ())

      Requests cancellation of a running WorkflowInvocation.

      :param project_id: Required. The ID of the Google Cloud project that the task belongs to.
      :param region: Required. The ID of the Google Cloud region that the task belongs to.
      :param repository_id: Required. The ID of the Dataform repository that the task belongs to.
      :param workflow_invocation_id:  Required. The workflow invocation resource's id.
      :param retry: Designation of what errors, if any, should be retried.
      :param timeout: The timeout for this request.
      :param metadata: Strings which should be sent along with the request as metadata.


   .. py:method:: create_repository(*, project_id, region, repository_id, retry = DEFAULT, timeout = None, metadata = ())

      Creates repository.

      :param project_id: Required. The ID of the Google Cloud project where repository should be.
      :param region: Required. The ID of the Google Cloud region where repository should be.
      :param repository_id: Required. The ID of the new Dataform repository.
      :param retry: Designation of what errors, if any, should be retried.
      :param timeout: The timeout for this request.
      :param metadata: Strings which should be sent along with the request as metadata.


   .. py:method:: delete_repository(*, project_id, region, repository_id, force = True, retry = DEFAULT, timeout = None, metadata = ())

      Deletes repository.

      :param project_id: Required. The ID of the Google Cloud project where repository located.
      :param region: Required. The ID of the Google Cloud region where repository located.
      :param repository_id: Required. The ID of the Dataform repository that should be deleted.
      :param force: If set to true, any child resources of this repository will also be deleted.
      :param retry: Designation of what errors, if any, should be retried.
      :param timeout: The timeout for this request.
      :param metadata: Strings which should be sent along with the request as metadata.


   .. py:method:: create_workspace(*, project_id, region, repository_id, workspace_id, retry = DEFAULT, timeout = None, metadata = ())

      Creates workspace.

      :param project_id: Required. The ID of the Google Cloud project where workspace should be.
      :param region: Required. The ID of the Google Cloud region where workspace should be.
      :param repository_id: Required. The ID of the Dataform repository where workspace should be.
      :param workspace_id: Required. The ID of the new Dataform workspace.
      :param retry: Designation of what errors, if any, should be retried.
      :param timeout: The timeout for this request.
      :param metadata: Strings which should be sent along with the request as metadata.


   .. py:method:: delete_workspace(*, project_id, region, repository_id, workspace_id, retry = DEFAULT, timeout = None, metadata = ())

      Deletes workspace.

      :param project_id: Required. The ID of the Google Cloud project where workspace located.
      :param region: Required. The ID of the Google Cloud region where workspace located.
      :param repository_id: Required. The ID of the Dataform repository where workspace located.
      :param workspace_id: Required. The ID of the Dataform workspace that should be deleted.
      :param retry: Designation of what errors, if any, should be retried.
      :param timeout: The timeout for this request.
      :param metadata: Strings which should be sent along with the request as metadata.


   .. py:method:: write_file(*, project_id, region, repository_id, workspace_id, filepath, contents, retry = DEFAULT, timeout = None, metadata = ())

      Writes a new file to the specified workspace.

      :param project_id: Required. The ID of the Google Cloud project where workspace located.
      :param region: Required. The ID of the Google Cloud region where workspace located.
      :param repository_id: Required. The ID of the Dataform repository where workspace located.
      :param workspace_id: Required. The ID of the Dataform workspace where files should be created.
      :param filepath: Required. Path to file including name of the file relative to workspace root.
      :param contents: Required. Content of the file to be written.
      :param retry: Designation of what errors, if any, should be retried.
      :param timeout: The timeout for this request.
      :param metadata: Strings which should be sent along with the request as metadata.


   .. py:method:: make_directory(*, project_id, region, repository_id, workspace_id, path, retry = DEFAULT, timeout = None, metadata = ())

      Makes new directory in specified workspace.

      :param project_id: Required. The ID of the Google Cloud project where workspace located.
      :param region: Required. The ID of the Google Cloud region where workspace located.
      :param repository_id: Required. The ID of the Dataform repository where workspace located.
      :param workspace_id: Required. The ID of the Dataform workspace where directory should be created.
      :param path: Required. The directory's full path including new directory name,
          relative to the workspace root.
      :param retry: Designation of what errors, if any, should be retried.
      :param timeout: The timeout for this request.
      :param metadata: Strings which should be sent along with the request as metadata.


   .. py:method:: remove_directory(*, project_id, region, repository_id, workspace_id, path, retry = DEFAULT, timeout = None, metadata = ())

      Removes directory in specified workspace.

      :param project_id: Required. The ID of the Google Cloud project where workspace located.
      :param region: Required. The ID of the Google Cloud region where workspace located.
      :param repository_id: Required. The ID of the Dataform repository where workspace located.
      :param workspace_id: Required. The ID of the Dataform workspace where directory located.
      :param path: Required. The directory's full path including directory name,
          relative to the workspace root.
      :param retry: Designation of what errors, if any, should be retried.
      :param timeout: The timeout for this request.
      :param metadata: Strings which should be sent along with the request as metadata.


   .. py:method:: remove_file(*, project_id, region, repository_id, workspace_id, filepath, retry = DEFAULT, timeout = None, metadata = ())

      Removes file in specified workspace.

      :param project_id: Required. The ID of the Google Cloud project where workspace located.
      :param region: Required. The ID of the Google Cloud region where workspace located.
      :param repository_id: Required. The ID of the Dataform repository where workspace located.
      :param workspace_id: Required. The ID of the Dataform workspace where directory located.
      :param filepath: Required. The full path including name of the file, relative to the workspace root.
      :param retry: Designation of what errors, if any, should be retried.
      :param timeout: The timeout for this request.
      :param metadata: Strings which should be sent along with the request as metadata.


   .. py:method:: install_npm_packages(*, project_id, region, repository_id, workspace_id, retry = DEFAULT, timeout = None, metadata = ())

      Installs npm dependencies in the provided workspace. Requires "package.json"
      to be created in workspace.

      :param project_id: Required. The ID of the Google Cloud project where workspace located.
      :param region: Required. The ID of the Google Cloud region where workspace located.
      :param repository_id: Required. The ID of the Dataform repository where workspace located.
      :param workspace_id: Required. The ID of the Dataform workspace.
      :param retry: Designation of what errors, if any, should be retried.
      :param timeout: The timeout for this request.
      :param metadata: Strings which should be sent along with the request as metadata.



